feat: get field detail counts, refactor: get job with recruiter